Added rferesh token and added methods to retrieve user from db

--- a/PasswordManagerApp/PasswordManager/resources/email.html
+++ b/PasswordManagerApp/PasswordManager/resources/email.html
@@ -121,7 +121,7 @@
             <div class="body">
                 <img class="icon" src="{{EMAIL_ICON}}" alt="">
                 <p>{{EMAIL_MESSAGE}}</p>
-                <p>{{EMAIL_REFRESHTOKEN}}</p>
+                <b>{{EMAIL_REFRESHTOKEN}}</b>
                 {{EMAIL_BUTTONS}}
             </div>
         </div>
